[package]
name = "jh71xx-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4"
embedded-hal = "1.0.0-rc.3"
embedded-hal-nb = "1.0.0-rc.3"
embedded-io = "0.6"
heapless = "0.7"
nb = "1.1"

[dependencies.critical-section]
version = "1.1"
git = "https://github.com/rmsyn/critical-section"
branch = "staging" 
features = ["restore-state-u64x16"]

[dependencies.riscv]
version = "0.10"

[dependencies.jh71xx-pac]
version = "0.2"
git = "https://github.com/rmsyn/jh71xx-pac"

[dependencies.panic-halt]
version = "0.2"
optional = true

[dependencies.riscv-rt]
version = "0.11"
git = "https://github.com/rust-embedded/riscv-rt"
optional = true

[dev-dependencies.defmt]
version = "0.3"

[dev-dependencies.defmt-test]
version = "0.3"

[features]
visionfive2-12a = ["jh71xx-pac/visionfive2-12a"]
visionfive2-12a-rt = ["jh71xx-pac/visionfive2-12a-rt"]
visionfive2-12a-rts = ["jh71xx-pac/visionfive2-12a-rts"]
visionfive2-13b = ["jh71xx-pac/visionfive2-13b"]
visionfive2-13b-rt = ["jh71xx-pac/visionfive2-13b-rt"]
visionfive2-13b-rts = ["jh71xx-pac/visionfive2-13b-rts"]
