[package]
name = "jh71xx-hal"
version = "0.1.0"
edition = "2021"
authors = ["rmsyn <rmsyn@proton.me>"]
repository = "https://codeberg.org/rmsyn/jh71xx-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "Hardware abstraction library for the JH71xx SoCs"
keywords = ["riscv", "jh7110", "hal", "soc"]
license = "GPL-3.0-only"

[dependencies]
bitflags = "2.4"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6"
heapless = "0.7"
nb = "1.1"

[dependencies.critical-section]
version = "1.1"
git = "https://github.com/rmsyn/critical-section"
branch = "staging" 
features = ["restore-state-u64x16"]

[dependencies.riscv]
version = "0.10"

[dependencies.jh71xx-pac]
version = "0.3"

[dependencies.panic-halt]
version = "0.2"
optional = true

[dependencies.riscv-rt]
version = "0.11.0"
optional = true

[dev-dependencies.defmt]
version = "0.3"

[dev-dependencies.defmt-test]
version = "0.3"

[features]
rt = ["jh71xx-pac/rt", "riscv-rt"]
rts = ["rt", "jh71xx-pac/rts", "riscv-rt/s-mode"]
